# LetMeSeeIfImFree

./: .env  .gitignore  README.md  letmeseeifimfree.db
backend/: Cargo.toml
backend/migrations/: 001_create_events.sql
backend/src/: db.rs  main.rs  models.rs
backend/src/db/: mod.rs
