[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "5"
dotenvy = "0.15"
tower = "0.5.2"
eframe = "0.31.1"
egui = "0.31.1"
rusqlite = { version = "0.35.0", features = ["chrono"] }

